--- a/smartLianYun/Info.plist
+++ b/smartLianYun/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>zh</string>
+	</array>
 	<key>CFBundleDisplayName</key>
 	<string>智慧连云</string>
 	<key>CFBundleExecutable</key>
